# fast-store

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
src/: deps.py  main.py
src/alembic/: env.py
src/alembic/versions/: a9d64fae3af4_add_user_table.py  fe34dd141963_create_user_table.py
src/api/routes/: auth.py  user.py
src/authentication/: crud.py  models.py  schemas.py
src/authentication/routers/: users.py
src/core/: config.py  database.py  deps.py  security.py
src/db/: base.py  utils.py
src/models/: user.py
src/schemas/: user.py
src/services/: user_services.py
